fix some spacing error

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -356,7 +356,7 @@ div.score {
     justify-content: center;
     margin-top: 1em;
 
-    form {
+    button[id="btn-sapcing"] {
       margin-left: 1em;
     }
 
